# slims

./: .pdm.toml  README.md  pyproject.toml  sessions.json  settings.xml  test.db
src/slims/: ingest_from_session.py  tables.py
